ui/css/treeherder.css
/* ... */
.result-set .revision-list {
    padding-left: 0;
}

.logviewer-icon {
    width: 14px;
    height: 16px;
    vertical-align: text-bottom;
    opacity: 0.7;
}

.logviewer-icon:hover {
    opacity: 0.9;
}

.cancel-job-icon {
    font-size: 13px;
}

.icon-blue {
    color: #68aae2;
}

.icon-green:hover {
    color: #0de00d !important;
}

.dim-half {
    opacity: 0.5;
}

.dim-quarter {
    opacity: 0.75;
}

.revision-text {
    overflow: hidden;
    text-overflow: ellipsis;
    width: 7.2em;
    display: inline-block;
    vertical-align: middle;
}

.revision-button {
    flex: 0 0 60px;
    margin-right: 4px;
    margin-left: 4px;
}

.revision-list {
    overflow: hidden;
    white-space: nowrap;
}

.result-set .job-list-pad-left {
    padding-left: 8;
    padding-right: 0;
}

.job-list-pad-left table {
    width: 100%;
}

.job-list-pad-left table tr {
    border-bottom: 1px dotted lightgrey;
}

.job-list-pad-left table tr:nth-child(even) {
    background: #f8f8f8;
}

.result-set .job-list-nopad {
    padding-left: 0;
    padding-right: 0;
    display: block;
}

.selected-job {
    border: 4px solid;
    background-color: #fff;
}

.job-group {
    margin: 0 -3px 0 3px;
}

.job-btn {
  padding: 0 2px 0 2px;
  vertical-align: 0;
  line-height: 1.32;
}

.table-super-condensed thead > tr > th,
.table-super-condensed tbody > tr > th,
.table-super-condensed tfoot > tr > th,
.table-super-condensed thead > tr > td,
.table-super-condensed tbody > tr > td,
.table-super-condensed tfoot > tr > td {
    padding: 2px;
    font-size: .9em;
}

/*
 * resizer
 */
div#bottom-panel-resizer {
    display: flex;
    flex: none;
    -webkit-flex: none;
    background-color: #919dad;
    cursor: ns-resize;
    height: 2px;
}


/*
 * bottom panel
 */

div#bottom-panel {
    background-color: #AAAAAA;
    font-size: 12px;

    height: 35%;
    max-height: 35%;
    flex: none;
    -webkit-flex: none;

    display: -webkit-flex;
    display:         flex;
    -webkit-flex-flow: column;
    flex-flow: column;
}

div#bottom-panel .navbar{
    border-radius: 0px;
    border-style: solid;
    border-color: #42484F;
    border-width:1px 0;
    height:33px;
    margin:0;
    font-size:12px;
    min-height: 33px;
    min-width: initial;
    z-index: 100;
}

div#bottom-panel .navbar-nav > ul{
    height:32px;
}

div#bottom-panel .navbar-nav > li > a{
    padding: 6px 15px;
    line-height: 19px;
}

div#bottom-panel .navbar-nav > li > a.disabled {
    cursor: not-allowed;
    text-decoration: none;
}

div#bottom-panel ul.bottom-panel-controls{
    border-right: 1px solid #42484F;
}

div#bottom-panel .navbar-nav > li.active a,
div#bottom-panel .navbar-nav > li.active a:hover,
div#bottom-panel .navbar-nav > li.active a:focus {
    box-shadow: inset 0px 2px 0px;
    outline: 0;

}

div#bottom-panel .navbar > ul.tab-headers > li{
    border-right: 1px solid #42484F;
}

.navbar.navbar-dark{
    background-color: #252C33;
    color: #CED3D9;
}

.navbar.navbar-dark .navbar-nav > li > a{
    color: #9FA3A5;
}

.navbar.navbar-dark .navbar-nav > li > a:hover,
.navbar.navbar-dark .navbar-nav > li > a:focus {
    background-color: #1E252B;
    color: #D3D8DA;
}

div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a,
div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:hover,
div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:focus {
    background-color: #1A4666;
    color: #EEF0F2;
}

#bottom-panel-content {
   position: relative; /* So we can absolutely position the loading overlay */
   height: 60%;

   flex: auto;
   -webkit-flex: auto;

   display: -webkit-flex;
   display:         flex;
   -webkit-flex-flow: row;
           flex-flow: row;
}

#bottom-left-panel, #bottom-center-panel{
    overflow-y: auto;
    background-color: #FCFCFC;
    display: -webkit-flex;
    display:         flex;
    -webkit-flex-flow: column;
    flex-flow: column;
}

#bottom-left-top, #bottom-center-top {
    min-height: 33px;
}

.pinned-job-count {
    margin-left: 5px;
}

#bottom-left-panel {
    width:260px;
    overflow-y: auto;
}

#bottom-left-bottom > ul {
    margin: 0px;
    padding: 0px;
    line-height:12px;
}

#bottom-left-panel .content-spacer {
    padding-top: 2px;
    padding-bottom: 4px;
}

#bottom-left-panel ul li {
    padding: 0px 0px 0px 5px;
    line-height: 15px;
    word-wrap: break-word;
}

#bottom-left-panel ul li label{
    padding: 0;
    margin: 2px 0px;
}

#bottom-left-panel .star {
    color: #f0ad4e;
}

#bottom-left-panel em.testfail{ color:red;}

#bottom-left-panel .printlines{padding-bottom: 5px;}

#bottom-left-bottom, #bottom-center-bottom {
    overflow: auto;
}

#bottom-center-panel {
    -webkit-flex: 1 6;
    flex: 1 6;
    background-color: #FCFCFC;
    padding:0px;
    min-width: 500px;
}

#bottom-panel nav.navbar.navbar-sub{
    border-top: none;
}

#bottom-center-panel  ul.failure-summary-list{
    padding-left: 0px;
    height:100%;
    overflow: auto;
}

ul.failure-summary-list li {
    padding: 0px 0px 0px 2px;
    font-size: 11px;
    background: #ccfaff;
}

ul.failure-summary-list li .btn-xs {
    font-size: 8px;
}

.failure-summary-line-empty {
    padding: 2px 2px 0px;
    background: #ffffff;
}

.failure-summary-line {
    padding: 2px 2px 0px;
}

.failure-summary-bugs {
    padding: 0px 0px 0px 14px;
}

/* We override global anchor color to replicate TBPL here */
.failure-summary-bugs a {
    color: #0000ee;
}

.failure-summary-bugs button {
    padding: 2px 3px 1px 3px;
}

/* We override global anchor color to replicate TBPL here */
.show-hide-more {
    padding: 0px 0px 0px 35px;
    color: #0000ee;
}

.shadowed-panel {
    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.1), 0px 0px 2px 0px rgba(0, 0, 0, 0.8) inset;
    margin:0;
}
/* ... */

